2008-06-25  Don Porter  <dgp@users.sourceforge.net>

	*** 8.6a1 TAGGED FOR RELEASE ***

	* changes:	Updates for 8.6a1 release.

	* generic/tclOO.h:	Bump to TclOO 0.5.

2008-06-25  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* win/rules.vc: fix versions of dde and registry dlls
	* win/makefile.vc: fix problem building with staticpkg option

2008-06-24  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c:	Fixed some internals management in the "path"
	Tcl_ObjType for the empty string value.  Problem led to a crash in
	the command [glob -dir {} a]. [Bug 1999176].

2008-06-24  Pat Thoyts  <patthoyts@users.sourceforge.net>

	* doc/fileevent.n: bug #1995063 fix examples and comment on eof use.

2008-06-23  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclPathObj.c:	Fixed bug in Tcl_GetTranslatedPath() when
	operating on the "Special path" variant of the "path" Tcl_ObjType
	intrep.  A full normalization was getting done, in particular, coercing
	relative paths to absolute, contrary to what the function of
	producing the "translated path" is supposed to do.  [Bug 1972879].

2008-06-20  Don Porter  <dgp@users.sourceforge.net>

	* changes:	Updates for 8.6a1 release.

	* generic/tclInterp.c:  Fixed completely boneheaded mistake that
	* tests/interp.test:    [interp bgerror $slave] and [$slave bgerror]
	would always act like [interp bgerror {}].  [Bug 1999035].

	* tests/chanio.test:	Corrected flawed tests revealed by a -debug 1
	* tests/cmdAH.test:	-singleproc 1 test suite run.
	* tests/event.test:
	* tests/interp.test:
	* tests/io.test:
	* tests/ioTrans.test:
	* tests/namespace.test:

	* tests/encoding.test:	Make failing tests pass again.  [Bug 1972867]

2008-06-19  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclOO.c (Tcl_ObjectContextInvokeNext): Corrected 'next' (at
	* tests/oo.test (oo-7.8):	end of a call chain) to make it
	* doc/next.n:			consistent with the TIP. [Bug 1998244]
