@@ -7242,4 +7242,6 @@ variables without "." added to customization hooks (kupries)
 
 2008-06-24 (bug fix)[1999176] crash in [glob -dir {} a] (porter)
 
+2008-06-25 (bug fix)[1999119] Support TM packages in Sage Base (kupries)
+
 --- Released 8.6a1, June 25, 2008 --- See ChangeLog for details ---
