@@ -6,6 +6,13 @@
 
 	* generic/tclOO.h:	Bump to TclOO 0.5.
 
+2008-06-25  Andreas Kupries  <andreask@activestate.com>
+
+	* library/tm.tcl: Modified the handling of Tcl Modules and of the
+	* library/safe.tcl: Safe Base to interact nicely with each other,
+	* library/init.tcl: enabling requiring Tcl Modules in safe
+	* tests/safe.test: interpreters. Fixes [Bug 1999119].
+
 2008-06-25  Pat Thoyts  <patthoyts@users.sourceforge.net>
 
 	* win/rules.vc: fix versions of dde and registry dlls
